# flit-hackhaton

./: .env.example  .gitignore  .python-version  README.md  SPEC.md  SPEC_2.md  SPEC_3.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
flithack/: __init__.py  __main__.py  analyze.py  cache.py  chords.py  cli.py  generate.py  interpret.py  midi_repr.py  package.py  postprocess.py  preview.py  render.py  separate.py  timeline.py  transcribe.py
pitch/: pitch-deck.html
tests/: test_generate.py  test_interpret.py  test_midi_repr.py  test_render.py
tests/fixtures/: generation_clean.json  generation_messy.json
